--- a/_pages/about.html
+++ b/_pages/about.html
@@ -15,11 +15,18 @@ permalink: /about/
       <div class="tile__platform">@{{ site.author.github_username }}</div>
     </div>
   </a>
-  <a href="https://twitter.com/{{site.twitter_username}}" class="tile">
-    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" viewBox="0 0 96 96" width="48" height="48"><defs><path d="M96 0C96 0 96 0 96 0C96 57.6 96 89.6 96 96C96 96 96 96 96 96C38.4 96 6.4 96 0 96C0 96 0 96 0 96C0 38.4 0 6.4 0 0C0 0 0 0 0 0C57.6 0 89.6 0 96 0Z" id="d94Tw5q6uF"></path><path d="M30.19 85.84C66.42 85.84 86.23 56.41 86.23 30.88C86.23 30.04 86.23 29.21 86.17 28.38C90.03 25.65 93.36 22.26 96 18.38C92.41 19.95 88.59 20.97 84.69 21.42C88.8 19.01 91.88 15.21 93.35 10.74C89.48 12.99 85.25 14.58 80.84 15.43C73.38 7.65 60.9 7.27 52.97 14.59C47.86 19.31 45.69 26.34 47.27 33.05C31.44 32.27 16.68 24.93 6.68 12.86C1.45 21.69 4.12 32.98 12.78 38.65C9.65 38.56 6.58 37.73 3.84 36.23C3.84 36.31 3.84 36.39 3.84 36.48C3.84 45.67 10.45 53.59 19.64 55.41C16.74 56.19 13.7 56.3 10.75 55.75C13.33 63.61 20.72 69.01 29.15 69.16C22.17 74.54 13.56 77.45 4.69 77.45C3.12 77.44 1.56 77.35 0 77.17C9.01 82.84 19.49 85.84 30.19 85.83" id="d5kLNgBaBa"></path></defs><g><g><g><use xlink:href="#d94Tw5q6uF" opacity="1" fill="#000000" fill-opacity="0"></use><g><use xlink:href="#d94Tw5q6uF" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1" stroke-opacity="0"></use></g></g><g><use xlink:href="#d5kLNgBaBa" opacity="1" fill="#1da1f2" fill-opacity="1"></use><g><use xlink:href="#d5kLNgBaBa" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1" stroke-opacity="0"></use></g></g></g></g></svg>
+  <a href="https://www.linkedin.com/in/{{site.author.linkedin}}" class="tile">
+    <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" class="global-nav__logo">
+        <title>
+          LinkedIn
+        </title>
+        <g>
+<path d="M34,2.5v29A2.5,2.5,0,0,1,31.5,34H2.5A2.5,2.5,0,0,1,0,31.5V2.5A2.5,2.5,0,0,1,2.5,0h29A2.5,2.5,0,0,1,34,2.5ZM10,13H5V29h5Zm.45-5.5A2.88,2.88,0,0,0,7.59,4.6H7.5a2.9,2.9,0,0,0,0,5.8h0a2.88,2.88,0,0,0,2.95-2.81ZM29,19.28c0-4.81-3.06-6.68-6.1-6.68a5.7,5.7,0,0,0-5.06,2.58H17.7V13H13V29h5V20.49a3.32,3.32,0,0,1,3-3.58h.19c1.59,0,2.77,1,2.77,3.52V29h5Z"></path>
+        </g>
+      </svg>
     <div>
-      <div class="tile__handle">Twitter</div>
-      <div class="tile__platform">@{{ site.author.twitter_username }}</div>
+      <div class="tile__handle">LinkedIn</div>
+      <div class="tile__platform">@{{ site.author.linkedin }}</div>
     </div>
   </a>
 </div>
